  * DistUpgrade/DistUpgradeController.py:
    - when commenting out third party repositories add a comment
      why they were disabled and update them to the current dist  
      to make re-enabling easier
  * DistUpgrade/DistUpgradeQuirks.py:
    - run dpkg --forget-old-unvail after the upgrade finished
    - add "PostCleanup" hook 
  * DistUpgrade/cdromupgrade:
    - fixed typo (LP: #312184)


  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgrade.cfg
    - remove guidance-power-manager on kubuntu-desktop upgrade

  [ Andy Whitcroft ]
  * DistUpgrade/cdromupgrade
    - move to using dists/$CODENAME to locate the installer eliminating
      any dependance on symlinks in the image.  This allows usb-creator based
      images to be used unmodified.  (LP: #326856)

 --

update-manager (1:0.97) jaunty; urgency=low

  * UpdateManager/Core/MetaRelease.py:
    - remove debug message (LP: #310046)
  * UpdateManager/Common/utils.py:
    - when  initializing the proxy configuration, do in this
      order:
      * check apt setting
      * check synaptic setting
      * check users gconf
      * check http_proxy environment 
    (LP: #24250)
  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - ensure correct error message if downloading failed
      (LP: #113658)
    - when fetching from mirrors, add fallback if the mirror
      is too loaded to cope
    - improve logic that detects what mirror is in use by
      sources.list inspection (LP: #107983)
  * DistUpgrade/DistUpgradeMain.py, dist-upgrade.py:
    - re-factor and make code more modular
    - do not overwrite existing log files on upgrade
      (LP: #111819)
  * reorganize the imports and get rid of "Common" submodule 
    and merge that all into "Core"
  * improve the debug output via the "DEBUG_UPDATE_MANAGER"
    environment
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Jan 2009 17:26:40 +0100

update-manager (1:0.96.4) jaunty; urgency=low

  * DistUpgrade/DistUpgradeController.py: