@@ -15,6 +15,8 @@ update-manager (1:0.97.1) jaunty; urgency=low
     - add "PostCleanup" hook 
   * DistUpgrade/cdromupgrade:
     - fixed typo (LP: #312184)
+  * add "--no-focus-on-map option to bring update-manager up
+    in the background (DX team request)
 
 
   [ Jonathan Riddell ]
